# aad

./: Cargo.toml  LICENSE  README.md
.github/workflows/: benchmark.yml  ci.yml
aad/: Cargo.toml
aad/src/: gradients.rs  lib.rs
aad/src/overload/: arith.rs  scalar.rs
benches/: benchmark.rs
crates/aad/: Cargo.toml  LICENSE  README.md
crates/aad/benches/: benchmark.rs
crates/aad/src/: float_like.rs  gradients.rs  lib.rs  overload.rs  scalar_like.rs  tape.rs  variable.rs
crates/aad/src/overload/: arith.rs  inv.rs  math.rs  scalar.rs  sum.rs
crates/aad/src/overload/arith/: add.rs  div.rs  mul.rs  neg.rs  sub.rs
crates/aad/src/overload/scalar/: add.rs  div.rs  mul.rs  sub.rs
crates/aad_derive/: Cargo.toml
crates/aad_derive/src/: lib.rs
crates/test-aad/: Cargo.toml
crates/test-aad/tests/: array.rs  array_mixed.rs  array_sum.rs  composition.rs  trybuild.rs
data/main/large_computation_graph/: benchmark.cbor  measurement_250120034544.cbor  measurement_250120034617.cbor  measurement_250120035856.cbor  measurement_250120040257.cbor  measurement_250120041316.cbor  measurement_250120064231.cbor  measurement_250120064901.cbor  measurement_250120065051.cbor  measurement_250120071233.cbor  measurement_250120071411.cbor  measurement_250120074516.cbor  measurement_250120074553.cbor  measurement_250121225429.cbor  measurement_250125051240.cbor  measurement_250125052932.cbor  measurement_250125053147.cbor  measurement_250125055551.cbor  measurement_250125063801.cbor  measurement_250125064649.cbor  measurement_250125065939.cbor  measurement_250125145159.cbor  measurement_250125150810.cbor  measurement_250125150845.cbor  measurement_250125151119.cbor  measurement_250125151336.cbor  measurement_250126031952.cbor  measurement_250126032115.cbor  measurement_250126083943.cbor  measurement_250126085308.cbor  measurement_250126085355.cbor  measurement_250126090030.cbor  measurement_250126090653.cbor  measurement_250201131146.cbor  measurement_250202022714.cbor  measurement_250202025321.cbor  measurement_250202025848.cbor  measurement_250202032455.cbor  measurement_250203121105.cbor  measurement_250203122118.cbor  (+31 more)
data/main/large_computation_graph_derive/: benchmark.cbor  (+36 more)
reports/: index.html
reports/large_computation_graph/: index.html
reports/large_computation_graph_derive/: index.html
reports/large_computation_graph_f64/: index.html
reports/large_computation_graph_rust_quant/: index.html
src/: core.rs  gradients.rs  grads.rs  lib.rs  operation_record.rs  operations.rs  overload.rs  scalar_like.rs  tape.rs  var.rs  variable.rs
src/core/: operations.rs  tape.rs  var.rs
src/overload/: math.rs  operator.rs  scalar.rs
(+144 files in other folders)
