[package]
name = "aad"
version = "0.3.0"
authors = ["Hikaru Nakashima <nakashima.alg57@gmail.com>"]
description = "Automatic adjoint differentiation library"
edition = "2021"
repository = "https://github.com/nakashima-hikaru/aad"
license-file = "LICENSE"

[features]
benchmarks = ["criterion", "RustQuant_autodiff"]


[dependencies]
criterion = { version = "0.5.1", optional = true }
RustQuant_autodiff = { version = "0.4.0", optional = true }

[dev-dependencies]

[[bench]]
name = "benchmark"
harness = false

[lints.clippy]
pedantic = "warn"
similar_names = { level = "allow", priority = 1 }
