[workspace]
members = [
    "aad", "aad_derive",
]

[patch.crates-io]
aad = { path = "aad" }

[workspace.dependencies]
#syn = { version = "2.0", features = ["full", "extra-traits"] }
#quote = "1.0"
#proc-macro2 = "1.0"
proc-macro2 = { version = "1.0.74", default-features = false }
quote = { version = "1.0.35", default-features = false }
syn = { version = "2.0.81", default-features = false }
