[workspace]
members = [
    "aad", "aad_derive",
]

resolver = "2"

[patch.crates-io]
aad = { path = "aad" }

[workspace.dependencies]
proc-macro2 = { version = "1.0.74", default-features = false }
quote = { version = "1.0.35", default-features = false }
syn = { version = "2.0.81", default-features = false }
