[package]
name = "aad"
version = "0.6.0"
authors = ["Hikaru Nakashima <nakashima.alg57@gmail.com>"]
description = "Automatic adjoint differentiation library"
edition = "2021"
repository = "https://github.com/nakashima-hikaru/aad"
license-file = "LICENSE"

[features]
default = []
derive = ["dep:aad_derive"]
benchmarks = ["criterion", "RustQuant_autodiff"]

[dependencies]
num-traits = "0.2.19"
aad_derive = { version = "0.1.0", optional = true, path = "../aad_derive" }

criterion = { version = "0.5.1", optional = true }
RustQuant_autodiff = { version = "0.4.0", optional = true }

[dev-dependencies]

[[bench]]
name = "benchmark"
harness = false

[lints.clippy]
pedantic = "warn"
similar_names = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
